# Vibrance-Query-Resolver

./: db.sqlite3  manage.py  pyproject.toml  requirements.txt
queryraiservibrance/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
queryraiservibrance/templates/: base.html
services/: admin.py  choices.py  custom_azure.py  filters.py  forms.py  models.py  tasks.py  urls.py  views.py
services/migrations/: 0001_initial.py  0002_query_date_of_creation.py  0003_query_status.py  0004_query_email.py  0005_query_event_name.py  0006_rename_transaction_id_query_order_id.py
services/templates/registration/: login.html
services/templates/services/: ViewQuery.html  create_query.html  home.html  view_all_queries.html
